test/should_fail/inh_001.grg
actions inh_001 using inh_model_001;

rule bla { pattern {} modify {} }
